[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/start-assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29, 20 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 1 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 30 )

[node name="TopChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -21 )
shape = SubResource( 2 )

[node name="SidesChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
